--- a/home.html
+++ b/home.html
@@ -4,33 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="https://fonts.googleapis.com/css2?family=Modern+Antiqua&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
-
     <title>Css Burguer Home</title>
+    <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
 </head>
 <body>
-    <header class="header">
+    <header>
+        <img src="./resources/css/img/logo.png" alt="Css Burguer">
         <nav>
-            <div>
-                <img src="./resources/css/img/logo.png" alt="Css Burguer" class="logo">
-                <ul class="menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Cardápio</a></li>
-                    <li><a href="#">Galeria</a></li>
-                    <li><a href="#">Promoções</a></li>
-                    <li><a href="#">Delivery</a></li>
-                    <li><a href="#">Reservas</a></li>
-                    <li><a href="#">Seja um franqueado</a></li>
-                </ul>
-            </div>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Cardápio</a></li>
+            <li><a href="#">Galeria</a></li>
+            <li><a href="#">Promoções</a></li>
+            <li><a href="#">Delivery</a></li>
+            <li><a href="#">Reservas</a></li>
+            <li><a href="#">Seja um franqueado</a></li>
         </nav>
     </header>
-    <section>
-        <div>
-            <img src="./resources/img/meat-burger-tomato-onion-beans-walnuts-side-view 1.jpg" alt="Burguer" class="burguer">
-        </div>
+    <section class="container-img">
+        <p>
+            A hamburgueria Css Burguer foi criada em 2020 na disciplina de desenvolvimento Web para Dispositivos Móveis, 
+            então trouxemos uma experiência unica de sensações e linhas de código.
+        </p>
     </section>
-    
+    <footer>
+        <div>
+            <div class="col span-1-of-2">
+                <ul class="footer-nav">
+                    <li><a href="#">Nosso Hamburguer é o melhor.</a></li>
+                </ul>
+            </div>
+            <div>
+                <ul class="social-links">
+                    <li><a href="#"><ion-icon class="logo-instagram" name="logo-instagram"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon class="logo-facebook" name="logo-facebook"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon class="logo-googleplus" name="logo-googleplus"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon class="logo-twitter" name="logo-twitter"></ion-icon></a></li>
+                </ul>
+            </div>
+        </div>
+        <div>
+            <p>Copyright &copy; 2019 CSS BUrguer Todos os direitos reservados.</p>
+       </div>
+      </ul>
+    </footer>
+<script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
 </body>
 </html>
