--- a/galeria.html
+++ b/galeria.html
@@ -20,6 +20,9 @@
             <li><a href="#">Seja um franqueado</a></li>
         </nav>
     </header>
+    <section class="container-img">
+        
+    </section>
    
 <script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
 </body>
