--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
     <section class="container-img">
         <p>
             A hamburgueria Css Burguer foi criada em 2020 na disciplina de desenvolvimento Web para Dispositivos Móveis, 
-            então trouxemos uma experiência unica de sensações e linhas de código.
+            então trouxemos uma experiência única de sensações e linhas de código.
         </p>
     </section>
     <footer>
