--- a/galeria.html
+++ b/galeria.html
@@ -6,6 +6,7 @@
 
     <title>Css Burguer Galeria</title>
     <link rel="stylesheet" type="text/css" href="./resources/css/galeria.css">
+    
 </head>
 <body>
     <header>
@@ -20,10 +21,24 @@
             <li><a href="#">Seja um franqueado</a></li>
         </nav>
     </header>
-    <section class="container-img">
+    <section id="items-wrapper">
+        <div id="items">
+            <div class="item"><img src="./resources/img/galeria/1.jpg"></div>
+            <div class="item"><img src="./resources/img/galeria/2.jpg"></div>
+            <div class="item"><img src="./resources/img/galeria/3.jpg"></div>
+            <div class="item"><img src="./resources/img/galeria/4.jpg"></div>
+            <div class="item"><img src="./resources/img/galeria/5.jpg"></div>
+            <div class="item"><img src="./resources/img/galeria/6.jpg"></div>
+            <div class="item"><img src="./resources/img/galeria/7.jpg"></div>
+            <div class="item"><img src="./resources/img/galeria/8.jpg"></div>
+            <div class="item"><img src="./resources/img/galeria/9.jpg"></div>
+            <div class="item"><img src="./resources/img/galeria/10.jpg"></div>
+            <div class="item"><img src="./resources/img/galeria/11.jpg"></div>
+            <div class="item"><img src="./resources/img/galeria/12.jpg"></div>
+        </div>
         
     </section>
-   
+<script src="./resources/js/galeria.js"></script>   
 <script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
 </body>
 </html>
