--- a/home.html
+++ b/home.html
@@ -11,9 +11,9 @@
     <header>
         <img src="./resources/css/img/logo.png" alt="Css Burguer">
         <nav>
-            <li><a href="#">Home</a></li>
+            <li><a href="./home.html">Home</a></li>
             <li><a href="#">Cardápio</a></li>
-            <li><a href="#">Galeria</a></li>
+            <li><a href="./galeria.html">Galeria</a></li>
             <li><a href="#">Promoções</a></li>
             <li><a href="#">Delivery</a></li>
             <li><a href="#">Reservas</a></li>
