--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <section class="container-img">
-        <p>
+        <p class="font-size">
             A hamburgueria Css Burguer foi criada em 2020 na disciplina de desenvolvimento Web para Dispositivos Móveis, 
             então trouxemos uma experiência única de sensações e linhas de código.
         </p>
@@ -47,6 +47,7 @@
        </div>
       </ul>
     </footer>
+<script src="./resources/js/galeria.js"></script>
 <script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
 </body>
 </html>
