--- a/galeria.html
+++ b/galeria.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link href="https://fonts.googleapis.com/css2?family=Modern+Antiqua&display=swap" rel="stylesheet">
     <title>Css Burguer Galeria</title>
     <link rel="stylesheet" type="text/css" href="./resources/css/galeria.css">
     
@@ -21,7 +21,8 @@
             <li><a href="#">Seja um franqueado</a></li>
         </nav>
     </header>
-    <section id="items-wrapper">
+    <section id="items-wrapper items-container">
+        <h1>Galeria</h1>
         <div id="items">
             <div class="item"><img src="./resources/img/galeria/1.jpg"></div>
             <div class="item"><img src="./resources/img/galeria/2.jpg"></div>
@@ -35,10 +36,30 @@
             <div class="item"><img src="./resources/img/galeria/10.jpg"></div>
             <div class="item"><img src="./resources/img/galeria/11.jpg"></div>
             <div class="item"><img src="./resources/img/galeria/12.jpg"></div>
-        </div>
-        
+        </div>  
     </section>
-<script src="./resources/js/galeria.js"></script>   
+    <footer>
+        <div>
+            <div class="col span-1-of-2">
+                <ul class="footer-nav">
+                    <li><a href="#">Nosso Hamburguer é o melhor.</a></li>
+                </ul>
+            </div>
+            <div>
+                <ul class="social-links">
+                    <li><a href="#"><ion-icon class="logo-instagram" name="logo-instagram"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon class="logo-facebook" name="logo-facebook"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon class="logo-googleplus" name="logo-googleplus"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon class="logo-twitter" name="logo-twitter"></ion-icon></a></li>
+                </ul>
+            </div>
+        </div>
+        <div>
+            <p>Copyright &copy; 2019 CSS BUrguer Todos os direitos reservados.</p>
+       </div>
+      </ul>
+    </footer>
+<script src="./resources/js/galeria.js"></script>
 <script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
 </body>
 </html>
