--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link href="https://fonts.googleapis.com/css2?family=Modern+Antiqua&display=swap" rel="stylesheet">
     <title>Css Burguer Home</title>
     <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
 </head>
@@ -47,7 +47,6 @@
        </div>
       </ul>
     </footer>
-<script src="./resources/js/galeria.js"></script>
 <script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
 </body>
 </html>
