--- a/home.html
+++ b/home.html
@@ -8,20 +8,20 @@
     <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
 </head>
 <body>
-    <header>
+    <header class="menu">
         <img src="./resources/css/img/logo.png" alt="Css Burguer">
-        <nav>
-            <li><a href="./home.html">Home</a></li>
-            <li><a href="#">Cardápio</a></li>
-            <li><a href="./galeria.html">Galeria</a></li>
-            <li><a href="#">Promoções</a></li>
-            <li><a href="#">Delivery</a></li>
-            <li><a href="#">Reservas</a></li>
-            <li><a href="#">Seja um franqueado</a></li>
+        <nav class="nav-menu">
+            <li class="item-nav"><a href="./home.html">Home</a></li>
+            <li class="item-nav"><a href="#">Cardápio</a></li>
+            <li class="item-nav"><a href="./galeria.html">Galeria</a></li>
+            <li class="item-nav"><a href="#">Promoções</a></li>
+            <li class="item-nav"><a href="#">Delivery</a></li>
+            <li class="item-nav"><a href="#">Reservas</a></li>
+            <li class="item-nav"><a href="#">Seja um franqueado</a></li>
         </nav>
     </header>
     <section class="container-img">
-        <p class="font-size">
+        <p >
             A hamburgueria Css Burguer foi criada em 2020 na disciplina de desenvolvimento Web para Dispositivos Móveis, 
             então trouxemos uma experiência única de sensações e linhas de código.
         </p>
