--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
             <li class="item-nav"><a href="./home.html">Home</a></li>
             <li class="item-nav"><a href="#">Cardápio</a></li>
             <li class="item-nav"><a href="./galeria.html">Galeria</a></li>
-            <li class="item-nav"><a href="#">Promoções</a></li>
+            <li class="item-nav"><a href="./promocoes.html">Promoções</a></li>
             <li class="item-nav"><a href="#">Delivery</a></li>
             <li class="item-nav"><a href="#">Reservas</a></li>
             <li class="item-nav"><a href="#">Seja um franqueado</a></li>
