--- a/promocoes.html
+++ b/promocoes.html
@@ -50,9 +50,9 @@
         </nav>
     </header>
     <section class="container-img">
-        <p >
-            A hamburgueria Css Burguer foi criada em 2020 na disciplina de desenvolvimento Web para Dispositivos Móveis, 
-            então trouxemos uma experiência única de sensações e linhas de código.
-        </p>
+        <div>
+            <img src="./resources/img/promo/">
+        </div>
+        
     </section>
 </body>
