--- a/home.html
+++ b/home.html
@@ -21,10 +21,10 @@
         </nav>
     </header>
     <section class="container-img">
-        <p >
+        <div>
             A hamburgueria Css Burguer foi criada em 2020 na disciplina de desenvolvimento Web para Dispositivos Móveis, 
             então trouxemos uma experiência única de sensações e linhas de código.
-        </p>
+        </div>
     </section>
     <footer>
         <div>
