--- a/promocoes.html
+++ b/promocoes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Modern+Antiqua&display=swap" rel="stylesheet">
     <title>Css Burguer Promoções</title>
-    <link rel="stylesheet" type="text/css" href="./resources/css/galeria.css">
+    <link rel="stylesheet" type="text/css" href="./resources/css/promo.css">
     
 </head>
 <body>
@@ -49,10 +49,9 @@
             </li>
         </nav>
     </header>
-    <section class="container-img">
-        <div>
-            <img src="./resources/img/promo/">
-        </div>
-        
-    </section>
+    <figure class="background-section">
+        <h1>Promoções</h1>
+        <div class="transition">sjijiajis</div>
+        <img src="./resources/img/promo/promobackground.jpg">
+    </figure>
 </body>
