--- a/promocoes.html
+++ b/promocoes.html
@@ -49,9 +49,48 @@
             </li>
         </nav>
     </header>
-    <figure class="background-section">
+    <!-- <figure class="background-section">
         <h1>Promoções</h1>
         <div class="transition">sjijiajis</div>
         <img src="./resources/img/promo/promobackground.jpg">
-    </figure>
+    </figure> -->
+    <article class="transition-section">
+        <h1>Promoções</h1>
+        <div class="transition"></div>
+    </article>
+    <section class="promo-section">
+        <h2>Segunda-feira</h2>
+        <div class="promo-details">
+            Na segunda-feira na compra de três Burguer Margin, você ganha uma
+            Coca-cola 2 Litros mais porção de batata rústica.
+            <figure class="promo-figure">
+                <!-- <img src="./resources/img/promo/segunda.jpg"> -->
+            </figure>
+        </div>
+        <h2>Terça-feira</h2>
+        <div class="promo-details">
+            Na segunda-feira na compra de três Burguer Margin, você ganha uma
+            Coca-cola 2 Litros mais porção de batata rústica.
+        </div>
+        <h2>Quarta-feira</h2>
+        <div class="promo-details">
+            Na segunda-feira na compra de três Burguer Margin, você ganha uma
+            Coca-cola 2 Litros mais porção de batata rústica.
+        </div>
+        <h2>Quinta-feira</h2>
+        <div class="promo-details">
+            Na segunda-feira na compra de três Burguer Margin, você ganha uma
+            Coca-cola 2 Litros mais porção de batata rústica.
+        </div>
+        <h2>Sexta-feira</h2>
+        <div class="promo-details">
+            Na segunda-feira na compra de três Burguer Margin, você ganha uma
+            Coca-cola 2 Litros mais porção de batata rústica.
+        </div>
+        <h2>Sábado</h2>
+        <div class="promo-details">
+            Na segunda-feira na compra de três Burguer Margin, você ganha uma
+            Coca-cola 2 Litros mais porção de batata rústica.
+        </div>
+    </section>
 </body>
