--- a/promocoes.html
+++ b/promocoes.html
@@ -61,36 +61,34 @@
     <section class="promo-section">
         <h2>Segunda-feira</h2>
         <div class="promo-details">
-            Na segunda-feira na compra de três Burguer Margin, você ganha uma
-            Coca-cola 2 Litros mais porção de batata rústica.
-            <figure class="promo-figure">
-                <!-- <img src="./resources/img/promo/segunda.jpg"> -->
-            </figure>
-        </div>
+            <p></p>Na segunda-feira na compra de três Burguer Margin, você ganha uma
+                Coca-cola 2 Litros mais porção de batata rústica.</p>
+            <!-- <img src="./resources/img/promo/segunda.jpg"> -->
         <h2>Terça-feira</h2>
         <div class="promo-details">
-            Na segunda-feira na compra de três Burguer Margin, você ganha uma
-            Coca-cola 2 Litros mais porção de batata rústica.
+            <p>Na segunda-feira na compra de três Burguer Margin, você ganha uma
+                Coca-cola 2 Litros mais porção de batata rústica.</p>
         </div>
         <h2>Quarta-feira</h2>
         <div class="promo-details">
-            Na segunda-feira na compra de três Burguer Margin, você ganha uma
-            Coca-cola 2 Litros mais porção de batata rústica.
+            <p>Na segunda-feira na compra de três Burguer Margin, você ganha uma
+                Coca-cola 2 Litros mais porção de batata rústica.</p>
         </div>
         <h2>Quinta-feira</h2>
         <div class="promo-details">
-            Na segunda-feira na compra de três Burguer Margin, você ganha uma
-            Coca-cola 2 Litros mais porção de batata rústica.
+            <p>Na segunda-feira na compra de três Burguer Margin, você ganha uma
+            Coca-cola 2 Litros mais porção de batata rústica.</p>
         </div>
         <h2>Sexta-feira</h2>
         <div class="promo-details">
-            Na segunda-feira na compra de três Burguer Margin, você ganha uma
-            Coca-cola 2 Litros mais porção de batata rústica.
+            <p>Na segunda-feira na compra de três Burguer Margin, você ganha uma
+                Coca-cola 2 Litros mais porção de batata rústica.
+            </p>
         </div>
         <h2>Sábado</h2>
         <div class="promo-details">
-            Na segunda-feira na compra de três Burguer Margin, você ganha uma
-            Coca-cola 2 Litros mais porção de batata rústica.
+            <p>Na segunda-feira na compra de três Burguer Margin, você ganha uma
+                Coca-cola 2 Litros mais porção de batata rústica.</p>
         </div>
     </section>
 </body>
