--- a/galeria.html
+++ b/galeria.html
@@ -137,7 +137,7 @@
             </li>
         </ul>
     </section> 
-    <footer>
+    <footer class="promo-footer">
         <div>
             <div class="col span-1-of-2">
                 <ul class="footer-nav">
