--- a/promocoes.html
+++ b/promocoes.html
@@ -61,9 +61,9 @@
     <section class="promo-section">
         <h2>Segunda-feira</h2>
         <div class="promo-details">
-            <p></p>Na segunda-feira na compra de três Burguer Margin, você ganha uma
+            <p>Na segunda-feira na compra de três Burguer Margin, você ganha uma
                 Coca-cola 2 Litros mais porção de batata rústica.</p>
-            <!-- <img src="./resources/img/promo/segunda.jpg"> -->
+        </div>
         <h2>Terça-feira</h2>
         <div class="promo-details">
             <p>Na segunda-feira na compra de três Burguer Margin, você ganha uma
@@ -91,4 +91,27 @@
                 Coca-cola 2 Litros mais porção de batata rústica.</p>
         </div>
     </section>
+    <footer class="promo-footer">
+        <div>
+            <div class="col span-1-of-2">
+                <ul class="footer-nav">
+                    <li><a href="#">Nosso Hamburguer é o melhor.</a></li>
+                </ul>
+            </div>
+            <div>
+                <ul class="social-links">
+                    <li><a href="#"><ion-icon class="logo-instagram" name="logo-instagram"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon class="logo-facebook" name="logo-facebook"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon class="logo-googleplus" name="logo-googleplus"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon class="logo-twitter" name="logo-twitter"></ion-icon></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-paragrafo">
+            <p>Copyright &copy; 2019 CSS BUrguer Todos os direitos reservados.</p>
+       </div>
+      </ul>
+    </footer>
+<script src="./resources/js/galeria.js"></script>
+<script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
 </body>
