--- a/promocoes.html
+++ b/promocoes.html
@@ -49,44 +49,60 @@
             </li>
         </nav>
     </header>
-    <!-- <figure class="background-section">
-        <h1>Promoções</h1>
-        <div class="transition">sjijiajis</div>
-        <img src="./resources/img/promo/promobackground.jpg">
-    </figure> -->
+    
     <article class="transition-section">
         <h1>Promoções</h1>
-        <div class="transition"></div>
+
+        <div class="slider">
+            <img class="selected" src="./resources/img/promo/1.jpg">
+            <img src="./resources/img/promo/2.jpg">
+            <img src="./resources/img/promo/3.jpg">
+            <img src="./resources/img/promo/4.jpg">
+            <img src="./resources/img/promo/5.jpg">
+            <img src="./resources/img/promo/6.jpg">
+            <img src="./resources/img/promo/7.jpg">
+        </div>
+
     </article>
+
     <section class="promo-section">
+        
         <h2>Segunda-feira</h2>
         <div class="promo-details">
+            <img class="burguer" src="./resources/img/promo/burguer.jpg">
+
             <p>Na segunda-feira na compra de três Burguer Margin, você ganha uma
                 Coca-cola 2 Litros mais porção de batata rústica.</p>
         </div>
         <h2>Terça-feira</h2>
         <div class="promo-details">
+            <img class="burguer" src="./resources/img/promo/burguer1.jpg">
+
             <p>Na segunda-feira na compra de três Burguer Margin, você ganha uma
                 Coca-cola 2 Litros mais porção de batata rústica.</p>
         </div>
         <h2>Quarta-feira</h2>
         <div class="promo-details">
+            <img class="burguer" src="./resources/img/promo/burguer.jpg">
             <p>Na segunda-feira na compra de três Burguer Margin, você ganha uma
                 Coca-cola 2 Litros mais porção de batata rústica.</p>
         </div>
         <h2>Quinta-feira</h2>
         <div class="promo-details">
+            <img class="burguer" src="./resources/img/promo/burguer1.jpg">
             <p>Na segunda-feira na compra de três Burguer Margin, você ganha uma
             Coca-cola 2 Litros mais porção de batata rústica.</p>
         </div>
         <h2>Sexta-feira</h2>
         <div class="promo-details">
+            <img class="burguer" src="./resources/img/promo/burguer.jpg">
             <p>Na segunda-feira na compra de três Burguer Margin, você ganha uma
                 Coca-cola 2 Litros mais porção de batata rústica.
             </p>
         </div>
         <h2>Sábado</h2>
         <div class="promo-details">
+            <img class="burguer" src="./resources/img/promo/burguer1.jpg">
             <p>Na segunda-feira na compra de três Burguer Margin, você ganha uma
                 Coca-cola 2 Litros mais porção de batata rústica.</p>
         </div>
@@ -112,6 +128,6 @@
        </div>
       </ul>
     </footer>
-<script src="./resources/js/galeria.js"></script>
-<script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
+    <script src="./resources/js/promo.js"></script>
+    <script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
 </body>
