--- a/home.html
+++ b/home.html
@@ -11,13 +11,41 @@
     <header class="menu">
         <img src="./resources/css/img/logo.png" alt="Css Burguer">
         <nav class="nav-menu">
-            <li class="item-nav"><a href="./home.html">Home</a></li>
-            <li class="item-nav"><a href="#">Cardápio</a></li>
-            <li class="item-nav"><a href="./galeria.html">Galeria</a></li>
-            <li class="item-nav"><a href="./promocoes.html">Promoções</a></li>
-            <li class="item-nav"><a href="#">Delivery</a></li>
-            <li class="item-nav"><a href="#">Reservas</a></li>
-            <li class="item-nav"><a href="#">Seja um franqueado</a></li>
+            <li class="item-nav ">
+                <a href="./home.html">
+                    Home
+                </a>
+            </li>
+            <li class="item-nav">
+                <a href="#">
+                    Cardápio
+                </a>
+            </li>
+            <li class="item-nav">
+                <a href="./galeria.html">
+                    Galeria
+                </a>
+            </li>
+            <li class="item-nav">
+                <a href="./promocoes.html">
+                    Promoções
+                </a>
+            </li>
+            <li class="item-nav">
+                <a href="#">
+                    Delivery
+                </a>
+            </li>
+            <li class="item-nav">
+                <a href="#">
+                    Reservas
+                </a>
+            </li>
+            <li class="item-nav">
+                <a href="#">
+                    Seja um franqueado
+                </a>
+            </li>
         </nav>
     </header>
     <section class="container-img">
@@ -26,7 +54,7 @@
             então trouxemos uma experiência única de sensações e linhas de código.
         </div>
     </section>
-    <footer>
+    <footer class="promo-footer">
         <div>
             <div class="col span-1-of-2">
                 <ul class="footer-nav">
@@ -42,11 +70,11 @@
                 </ul>
             </div>
         </div>
-        <div>
+        <div class="footer-paragrafo">
             <p>Copyright &copy; 2019 CSS BUrguer Todos os direitos reservados.</p>
        </div>
       </ul>
     </footer>
-<script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
+    <script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
 </body>
 </html>
