--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
                 </a>
             </li>
             <li class="item-nav">
-                <a href="#">
+                <a href="./cardapio.html">
                     Cardápio
                 </a>
             </li>
@@ -50,8 +50,13 @@
     </header>
     <section class="container-img">
         <div>
-            A hamburgueria Css Burguer foi criada em 2020 na disciplina de desenvolvimento Web para Dispositivos Móveis, 
-            então trouxemos uma experiência única de sensações e linhas de código.
+            <p>
+                A hamburgueria Css Burguer foi criada em 2020 na disciplina de desenvolvimento Web para Dispositivos Móveis, 
+                então trouxemos uma experiência única de sensações e linhas de código.
+            </p>
+        </div>
+        <div>
+            <img class="section-img" src="./resources/img/home/meat-burger-tomato-onion-beans-walnuts-side-view 1.jpg">
         </div>
     </section>
     <footer class="promo-footer">
