--- a/galeria.html
+++ b/galeria.html
@@ -13,7 +13,7 @@
         <img src="./resources/css/img/logo.png" alt="Css Burguer">
         <nav class="nav-menu">
             <li class="item-nav "><a href="./home.html">Home</a></li>
-            <li class="item-nav"><a href="#">Cardápio</a></li>
+            <li class="item-nav"><a href="./cardapio.html">Cardápio</a></li>
             <li class="item-nav"><a href="./galeria.html">Galeria</a></li>
             <li class="item-nav"><a href="./promocoes.html">Promoções</a></li>
             <li class="item-nav"><a href="#">Delivery</a></li>
