--- a/home.html
+++ b/home.html
@@ -50,13 +50,13 @@
     </header>
     <section class="container-img">
         <div>
-            <p>
+            <h1 class="container-p">
                 A hamburgueria Css Burguer foi criada em 2020 na disciplina de desenvolvimento Web para Dispositivos Móveis, 
                 então trouxemos uma experiência única de sensações e linhas de código.
-            </p>
+            </h1>
         </div>
         <div>
-            <img class="section-img" src="./resources/img/home/meat-burger-tomato-onion-beans-walnuts-side-view 1.jpg">
+            <img class="section-img" src="./resources/img/home/promobackground.jpg">
         </div>
     </section>
     <footer class="promo-footer">
