--- a/cardapio.html
+++ b/cardapio.html
@@ -54,13 +54,12 @@
         <h1>Cardápio</h1>
 
         <div class="slider">
-            <img class="selected" src="./resources/img/promo/1.jpg">
-            <img src="./resources/img/promo/2.jpg">
-            <img src="./resources/img/promo/3.jpg">
-            <img src="./resources/img/promo/4.jpg">
-            <img src="./resources/img/promo/5.jpg">
-            <img src="./resources/img/promo/6.jpg">
-            <img src="./resources/img/promo/7.jpg">
+            <img class="selected" src="./resources/img/cardapio/1.png">
+            <img src="./resources/img/cardapio/2.png">
+            <img src="./resources/img/cardapio/3.png">
+            <img src="./resources/img/cardapio/4.png">
+            <img src="./resources/img/cardapio/5.png">
+            <img src="./resources/img/cardapio/6.png">
         </div>
 
     </article>
@@ -78,18 +77,13 @@
                 <span class="descricao">400g de carne, bacon, tomate, queijo, alface e molho especial</span>
             </li>
             <li>
-                <span class="pedido">Color Burguer</span>
-                <span class="valor">$31,90</span>
-                <span class="descricao">400g de carne, bacon, tomate, queijo, alface e molho especial</span>
-            </li>
-            <li>
-                <span class="pedido">Widht Burguer</span>
-                <span class="valor">$18,90</span>
-                <span class="descricao">400g de carne, bacon, tomate, queijo, alface e molho especial</span>
-            </li>
-            <li>
                 <span class="pedido">Size Burguer</span>
                 <span class="valor">$62,90</span>
+                <span class="descricao">400g de carne, bacon, tomate, queijo, alface e molho especial</span>
+            </li>
+            <li>
+                <span class="pedido">Color Burguer</span>
+                <span class="valor">$31,90</span>
                 <span class="descricao">400g de carne, bacon, tomate, queijo, alface e molho especial</span>
             </li>
             <li>
@@ -97,6 +91,11 @@
                 <span class="valor">$25,90</span>
                 <span class="descricao">400g de carne, bacon, tomate, queijo, alface e molho especial</span>
             </li>
+            <li>
+                <span class="pedido">Widht Burguer</span>
+                <span class="valor">$18,90</span>
+                <span class="descricao">400g de carne, bacon, tomate, queijo, alface e molho especial</span>
+            </li>     
     </section>
     <footer class="promo-footer">
         <div>
