--- a/cardapio.html
+++ b/cardapio.html
@@ -54,12 +54,12 @@
         <h1>Cardápio</h1>
 
         <div class="slider">
-            <img class="selected" src="./resources/img/cardapio/1.png">
-            <img src="./resources/img/cardapio/2.png">
-            <img src="./resources/img/cardapio/3.png">
-            <img src="./resources/img/cardapio/4.png">
-            <img src="./resources/img/cardapio/5.png">
-            <img src="./resources/img/cardapio/6.png">
+            <img class="selected" src="./resources/img/cardapio/1.png" alt="cardapio">
+            <img src="./resources/img/cardapio/2.png" alt="cardapio">
+            <img src="./resources/img/cardapio/3.png" alt="cardapio">
+            <img src="./resources/img/cardapio/4.png" alt="cardapio">
+            <img src="./resources/img/cardapio/5.png" alt="cardapio"> 
+            <img src="./resources/img/cardapio/6.png" alt="cardapio">
         </div>
 
     </article>
