--- a/cardapio.html
+++ b/cardapio.html
@@ -7,9 +7,14 @@
     <title>Css Burguer Promoções</title>
     <link  href="./resources/css/cardapio.css" rel="stylesheet" type="text/css">
     
+
+   
 </head>
 <body>
     <header class="menu">
+        <input type="checkbox" id="btn">
+        <label for="nav-menu">&#9776;</label>
+        
         <img src="./resources/css/img/logo.png" alt="Css Burguer">
         <nav class="nav-menu">
             <li class="item-nav ">
@@ -18,7 +23,7 @@
                 </a>
             </li>
             <li class="item-nav">
-                <a href="#">
+                <a href="./cardapio.html">
                     Cardápio
                 </a>
             </li>
@@ -28,7 +33,7 @@
                 </a>
             </li>
             <li class="item-nav">
-                <a href="./promocoes.html">
+                <a href="./promo.html">
                     Promoções
                 </a>
             </li>
@@ -108,7 +113,6 @@
                 <ul class="social-links">
                     <li><a href="#"><ion-icon class="logo-instagram" name="logo-instagram"></ion-icon></a></li>
                     <li><a href="#"><ion-icon class="logo-facebook" name="logo-facebook"></ion-icon></a></li>
-                    <li><a href="#"><ion-icon class="logo-googleplus" name="logo-googleplus"></ion-icon></a></li>
                     <li><a href="#"><ion-icon class="logo-twitter" name="logo-twitter"></ion-icon></a></li>
                 </ul>
             </div>
