--- a/home.html
+++ b/home.html
@@ -49,15 +49,13 @@
         </nav>
     </header>
     <section class="container-img">
-        <div>
-            <h1 class="container-p">
-                A hamburgueria Css Burguer foi criada em 2020 na disciplina de desenvolvimento Web para Dispositivos Móveis, 
-                então trouxemos uma experiência única de sensações e linhas de código.
-            </h1>
-        </div>
-        <div>
-            <img class="section-img" src="./resources/img/home/promobackground.jpg">
-        </div>
+        <p class="container-p">
+                A hamburgueria Css Burguer foi criada em 2020 na disciplina de desenvolvimento Web
+            para Dispositivos Móveis,então trouxemos uma experiência única de sensações e linhas de código.
+            Um hambúrguer é um sanduíche que consiste em um ou mais hambúrgueres cozidos de carne moída, geralmente 
+            carne bovina, colocados dentro de um pão ou pão fatiado. O hambúrguer pode ser frito, grelhado, defumado ou grelhado.
+        </p>
+        <img class="section-img" src="./resources/img/home/promobackground.jpg">
     </section>
     <footer class="promo-footer">
         <div>
@@ -70,7 +68,6 @@
                 <ul class="social-links">
                     <li><a href="#"><ion-icon class="logo-instagram" name="logo-instagram"></ion-icon></a></li>
                     <li><a href="#"><ion-icon class="logo-facebook" name="logo-facebook"></ion-icon></a></li>
-                    <li><a href="#"><ion-icon class="logo-googleplus" name="logo-googleplus"></ion-icon></a></li>
                     <li><a href="#"><ion-icon class="logo-twitter" name="logo-twitter"></ion-icon></a></li>
                 </ul>
             </div>
