--- a/promo.html
+++ b/promo.html
@@ -48,18 +48,16 @@
                 </a>
             </li>
         </nav>
-    </header>
-    <section class="slider-exemplo">
-        <!-- código do site do bootstrap -->
-
+    </header>    
+    <section class="slider-exemplo">   
+        <h1>Galeria</h1>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <!-- Pontos de navegação -->
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
-
+        
         <div class="carousel-inner">
 
             <div class="carousel-item active">
@@ -87,6 +85,7 @@
         </a>
         </div>
     </section>
+
     <footer class="promo-footer">
         <div>
             <div class="col span-1-of-2">
@@ -104,9 +103,8 @@
         </div>
         <div class="footer-paragrafo">
             <p>Copyright &copy; 2019 CSS BUrguer Todos os direitos reservados.</p>
-       </div>
-      </ul>
-
+        </div>
+    </footer>
     <!-- importação da biblioteca JQUERY-->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<!-- importação da biblioteca POPPER-->
@@ -114,6 +112,6 @@
 	<!-- importação da biblioteca BOOTSTRAP-->
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	<!-- importação da biblioteca de ícones-->
-	<script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
+	<script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
 </body>
 </html>
