--- a/galeria.html
+++ b/galeria.html
@@ -16,12 +16,12 @@
             <li class="item-nav"><a href="./cardapio.html">Cardápio</a></li>
             <li class="item-nav"><a href="./galeria.html">Galeria</a></li>
             <li class="item-nav"><a href="./promo.html">Promoções</a></li>
-            <li class="item-nav"><a href="#">Delivery</a></li>
+            <li class="item-nav"><a href="./delivery.html">Delivery</a></li>
             <li class="item-nav"><a href="#">Reservas</a></li>
             <li class="item-nav"><a href="#">Seja um franqueado</a></li>
         </nav>
     </header>
-    <section id="items-wrapper ">
+    <section id="items-wrapper">
         <h1>Galeria</h1>
         <div id="items">
             <div class="item">
@@ -155,7 +155,6 @@
         <div>
             <p>Copyright &copy; 2019 CSS BUrguer Todos os direitos reservados.</p>
        </div>
-      </ul>
     </footer>
 <script src="./resources/js/galeria.js"></script>
 <script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
