--- a/promo.html
+++ b/promo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Modern+Antiqua&display=swap" rel="stylesheet">
     <link  href="./resources/css/promo.css" rel="stylesheet" type="text/css">
 
     <title>Promoções</title>
@@ -50,7 +51,7 @@
         </nav>
     </header>    
     <section class="slider-exemplo">   
-        <h1>Galeria</h1>
+        <h1>Promoções</h1>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
