--- a/delivery.html
+++ b/delivery.html
@@ -17,8 +17,8 @@
             <li class="item-nav"><a href="./galeria.html">Galeria</a></li>
             <li class="item-nav"><a href="./promo.html">Promoções</a></li>
             <li class="item-nav"><a href="./delivery.html">Delivery</a></li>
-            <li class="item-nav"><a href="#">Reservas</a></li>
-            <li class="item-nav"><a href="#">Seja um franqueado</a></li>
+            <li class="item-nav"><a href="./reservas.html">Reservas</a></li>
+            <li class="item-nav"><a href="./franqueado.html">Seja um franqueado</a></li>
         </nav>
     </header>
     <section class="section-steps">
