--- a/galeria.html
+++ b/galeria.html
@@ -18,7 +18,7 @@
             <li class="item-nav"><a href="./promo.html">Promoções</a></li>
             <li class="item-nav"><a href="./delivery.html">Delivery</a></li>
             <li class="item-nav"><a href="#">Reservas</a></li>
-            <li class="item-nav"><a href="#">Seja um franqueado</a></li>
+            <li class="item-nav"><a href="./franqueado.html">Seja um franqueado</a></li>
         </nav>
     </header>
     <section id="items-wrapper">
