--- a/promo.html
+++ b/promo.html
@@ -19,7 +19,7 @@
                 </a>
             </li>
             <li class="item-nav">
-                <a href="#">
+                <a href="./cardapio.html">
                     Cardápio
                 </a>
             </li>
@@ -34,17 +34,17 @@
                 </a>
             </li>
             <li class="item-nav">
-                <a href="#">
+                <a href="./delivery.html">
                     Delivery
                 </a>
             </li>
             <li class="item-nav">
-                <a href="#">
+                <a href="./reservas.html">
                     Reservas
                 </a>
             </li>
             <li class="item-nav">
-                <a href="#">
+                <a href="./franqueado.html">
                     Seja um franqueado
                 </a>
             </li>
