--- a/cardapio.html
+++ b/cardapio.html
@@ -38,7 +38,7 @@
                 </a>
             </li>
             <li class="item-nav">
-                <a href="#">
+                <a href="./delivery.html">
                     Delivery
                 </a>
             </li>
@@ -48,7 +48,7 @@
                 </a>
             </li>
             <li class="item-nav">
-                <a href="#">
+                <a href="./franqueado.html">
                     Seja um franqueado
                 </a>
             </li>
