--- a/home.html
+++ b/home.html
@@ -8,75 +8,77 @@
     <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
 </head>
 <body>
-    <header class="menu">
-        <img src="./resources/css/img/logo.png" alt="Css Burguer">
-        <nav class="nav-menu">
-            <li class="item-nav ">
-                <a href="./home.html">
-                    Home
-                </a>
-            </li>
-            <li class="item-nav">
-                <a href="./cardapio.html">
-                    Cardápio
-                </a>
-            </li>
-            <li class="item-nav">
-                <a href="./galeria.html">
-                    Galeria
-                </a>
-            </li>
-            <li class="item-nav">
-                <a href="./promocoes.html">
-                    Promoções
-                </a>
-            </li>
-            <li class="item-nav">
-                <a href="./delivery.html">
-                    Delivery
-                </a>
-            </li>
-            <li class="item-nav">
-                <a href="#">
-                    Reservas
-                </a>
-            </li>
-            <li class="item-nav">
-                <a href="./franqueado.html">
-                    Seja um franqueado
-                </a>
-            </li>
-        </nav>
-    </header>
-    <section class="container-img">
-        <p class="container-p">
-                A hamburgueria Css Burguer foi criada em 2020 na disciplina de desenvolvimento Web
-            para Dispositivos Móveis,então trouxemos uma experiência única de sensações e linhas de código.
-            Um hambúrguer é um sanduíche que consiste em um ou mais hambúrgueres cozidos de carne moída, geralmente 
-            carne bovina, colocados dentro de um pão ou pão fatiado. O hambúrguer pode ser frito, grelhado, defumado ou grelhado.
-        </p>
-        <img class="section-img" src="./resources/img/home/promobackground.jpg">
-    </section>
-    <footer class="promo-footer">
-        <div>
-            <div class="col span-1-of-2">
-                <ul class="footer-nav">
-                    <li><a href="#">Nosso Hamburguer é o melhor.</a></li>
-                </ul>
-            </div>
+    <div class="container">
+        <header >
+            <!-- <img src="./resources/css/img/logo.png" alt="Css Burguer"> -->
+            <nav class="nav-menu">
+                <li class="item-nav ">
+                    <a href="./home.html">
+                        Home
+                    </a>
+                </li>
+                <li class="item-nav">
+                    <a href="./cardapio.html">
+                        Cardápio
+                    </a>
+                </li>
+                <li class="item-nav">
+                    <a href="./galeria.html">
+                        Galeria
+                    </a>
+                </li>
+                <li class="item-nav">
+                    <a href="./promocoes.html">
+                        Promoções
+                    </a>
+                </li>
+                <li class="item-nav">
+                    <a href="./delivery.html">
+                        Delivery
+                    </a>
+                </li>
+                <li class="item-nav">
+                    <a href="#">
+                        Reservas
+                    </a>
+                </li>
+                <li class="item-nav">
+                    <a href="./franqueado.html">
+                        Seja um franqueado
+                    </a>
+                </li>
+            </nav>
+        </header>
+        <section class="container-img">
+            <p class="container-p">
+                    A hamburgueria Css Burguer foi criada em 2020 na disciplina de desenvolvimento Web
+                para Dispositivos Móveis,então trouxemos uma experiência única de sensações e linhas de código.
+                Um hambúrguer é um sanduíche que consiste em um ou mais hambúrgueres cozidos de carne moída, geralmente 
+                carne bovina, colocados dentro de um pão ou pão fatiado. O hambúrguer pode ser frito, grelhado, defumado ou grelhado.
+            </p>
+            <img class="section-img" src="./resources/img/home/promobackground.jpg">
+        </section>
+        <footer>
             <div>
-                <ul class="social-links">
-                    <li><a href="#"><ion-icon class="logo-instagram" name="logo-instagram"></ion-icon></a></li>
-                    <li><a href="#"><ion-icon class="logo-facebook" name="logo-facebook"></ion-icon></a></li>
-                    <li><a href="#"><ion-icon class="logo-twitter" name="logo-twitter"></ion-icon></a></li>
-                </ul>
+                <div class="col span-1-of-2">
+                    <ul class="footer-nav">
+                        <li><a href="#">Nosso Hamburguer é o melhor.</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul class="social-links">
+                        <li><a href="#"><ion-icon class="logo-instagram" name="logo-instagram"></ion-icon></a></li>
+                        <li><a href="#"><ion-icon class="logo-facebook" name="logo-facebook"></ion-icon></a></li>
+                        <li><a href="#"><ion-icon class="logo-twitter" name="logo-twitter"></ion-icon></a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div class="footer-paragrafo">
-            <p>Copyright &copy; 2019 CSS BUrguer Todos os direitos reservados.</p>
-       </div>
-      </ul>
-    </footer>
-    <script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
+            <div class="footer-paragrafo">
+                <p>Copyright &copy; 2019 CSS BUrguer Todos os direitos reservados.</p>
+           </div>
+          </ul>
+        </footer>
+        <script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
+    </div>
 </body>
 </html>
