--- a/cardapio.html
+++ b/cardapio.html
@@ -31,7 +31,7 @@
                     </a>
                 </li>
                 <li class="item-nav">
-                    <a href="./promocoes.html">
+                    <a href="./promo.html">
                         Promoções
                     </a>
                 </li>
@@ -41,7 +41,7 @@
                     </a>
                 </li>
                 <li class="item-nav">
-                    <a href="#">
+                    <a href="./reservas.html">
                         Reservas
                     </a>
                 </li>
