--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
                     </a>
                 </li>
                 <li class="item-nav">
-                    <a href="./promocoes.html">
+                    <a href="./promo.html">
                         Promoções
                     </a>
                 </li>
