--- a/promo.html
+++ b/promo.html
@@ -30,7 +30,7 @@
                     </a>
                 </li>
                 <li class="item-nav">
-                    <a href="./promocoes.html">
+                    <a href="./promo.html">
                         Promoções
                     </a>
                 </li>
@@ -40,7 +40,7 @@
                     </a>
                 </li>
                 <li class="item-nav">
-                    <a href="#">
+                    <a href="./reservas.html">
                         Reservas
                     </a>
                 </li>
@@ -91,19 +91,19 @@
             <section class="promocoes">
                 <p class="promo-section">Para comemorar a finalização do ano letivo<br>Fizemos essas deliciosas promoções: <br></p>
 
-                <h4 class="title-section">Segunda - Diferente</h4>
+                <h4 class="title-section">&#128562;Segunda - Diferente</h4>
 
-                <p class="promo-description"> Na compra do combo <i class="burguer"> CSS Burguer type Nº 1</i> você leva um super Margin Burguer
+                <p class="promo-description"> Na compra do combo <i class="burguer"> CSS Burguer type Nº 1</i> você leva dois super Margin Burguer
                     mais duas batatas super slice e uma coca-cola 2 Litros por apenas:<br> Apenas <strong>R$ 64,90 </strong> <br>
                     Não perca essa promoção!
                 </p>
-                <h4 class="title-section">Quarta - Maluca</h4>
+                <h4 class="title-section">&#128561; Quarta - Maluca</h4>
 
-                <p class="promo-description">Na compra do combo <i class="burguer"> CSS Burguer type Nº 2</i> você leva uma super Margin Burguer
+                <p class="promo-description">Na compra do combo <i class="burguer"> CSS Burguer type Nº 2</i> você leva um super Margin Burguer
                     e dois Burguer Color com três batatas super slice e uma coca-cola 2 Litros por apenas:<br> Apenas <strong>R$ 82,90 </strong> <br>
                     Não perca essa promoção!
                 </p>
-                <h4 class="title-section">Sexta - Leva Tudo</h4>
+                <h4 class="title-section"> &#128525;Sexta - Leva Tudo</h4>
 
                 <p class="promo-description">Na compra do combo <i class="burguer"> CSS Burguer type Nº 2</i> você leva uma super Margin Burguer
                     e dois Burguer Color com três batatas super slice e uma coca-cola 2 Litros por apenas:<br> Apenas <strong>R$ 95,90 </strong> <br>
