--- a/reservas.html
+++ b/reservas.html
@@ -10,47 +10,94 @@
 </head>
 
 <body>
-    <header class="menu">
-        <img src="./resources/css/img/logo.png" alt="Css Burguer">
-        <nav class="nav-menu">
-            <li class="item-nav ">
-                <a href="./home.html">
-                    Home
-                </a>
-            </li>
-            <li class="item-nav">
-                <a href="./cardapio.html">
-                    Cardápio
-                </a>
-            </li>
-            <li class="item-nav">
-                <a href="./galeria.html">
-                    Galeria
-                </a>
-            </li>
-            <li class="item-nav">
-                <a href="./promocoes.html">
-                    Promoções
-                </a>
-            </li>
-            <li class="item-nav">
-                <a href="./delivery.html">
-                    Delivery
-                </a>
-            </li>
-            <li class="item-nav">
-                <a href="./reservas.html">
-                    Reservas
-                </a>
-            </li>
-            <li class="item-nav">
-                <a href="./franqueado.html">
-                    Seja um franqueado
-                </a>
-            </li>
-        </nav>
-    </header>
-    <section class="container-img">
+    <div class="container-promo">
+        <header>
+            <!-- <img src="./resources/css/img/logo.png" alt="Css Burguer"> -->
+            <nav class="nav-menu">
+                <li class="item-nav ">
+                    <a href="./home.html">
+                        Home
+                    </a>
+                </li>
+                <li class="item-nav">
+                    <a href="./cardapio.html">
+                        Cardápio
+                    </a>
+                </li>
+                <li class="item-nav">
+                    <a href="./galeria.html">
+                        Galeria
+                    </a>
+                </li>
+                <li class="item-nav">
+                    <a href="./promo.html">
+                        Promoções
+                    </a>
+                </li>
+                <li class="item-nav">
+                    <a href="./delivery.html">
+                        Delivery
+                    </a>
+                </li>
+                <li class="item-nav">
+                    <a href="./reservas.html">
+                        Reservas
+                    </a>
+                </li>
+                <li class="item-nav">
+                    <a href="./franqueado.html">
+                        Seja um franqueado
+                    </a>
+                </li>
+            </nav>
+        </header> 
+        <section class="section-reservas">
+            <h1 class="reserva-h1">Reservas</h1>
+            <p class="descripition">
+                Para facilitar a rotina dos clientes e oferecer sempre o melhor atendimento, criamos a nossa Política de Reservas. Confira a seguir.<br>
+                Para reservar uma mesa no Old West, é preciso entrar em contato pelo telefone (51) 5555-5555 ou fazer a solicitação pelo site. Não aceitamos reservas por mensagens em nossas redes sociais ou por sites de avaliação de estabelecimentos, como o Tripadvisor.
+                As reservas pelo site podem ser feitas até as 18 horas da data escolhida e a confirmação estará sujeita à disponibilidade de mesas.<br>
+                Para garantir lugares em dias de promoção, recomendamos que a reserva seja feita com antecedência.<br>
+            </p><br>
+            <h2 class="reserva-h2">Como fazer a reserva no site</h2>
+                <p class="descripition">Acesse a nossa página de reservas e preencha todos os dados solicitados. A reserva será confirmada pela equipe Css Burguer por telefone ou e-mail, de acordo com os dados fornecidos no cadastro.</p><br>
+            <h2 class="reserva-h2">Horário de atendimento</h2>
+                <p class="descripition">Css Burguer atende de segunda a quinta das 18h00 às 23h e às sextas e sábados das 18h30 à meia-noite</p>
+        </section>
+        <section class="section-testimonials">
+            <div class="row">
+                <h2>Fazendo a vida mais saborosa</h2>
+            </div>
+            <div class="row">
+                <div class="col span-1-of-3">
+                    <blockquote>
+                        Concerteza o melhor hamburguer da região de Porto Alegre, A melhor opção para mim e que concerteza vai agrdar seu paladar... tem as melhores promoções que vão agradar a todos.
+                        <cite>
+                            <img src="./resources/img/reservas/customer-1.jpg"/>Juliano Queiroz
+                        </cite>
+                    </blockquote>
+                </div>
+                <div class="col span-1-of-3">
+                    <blockquote>
+                        Eu particularmente adora o Css Burguer! Venho todas as sextas com meus colegas de trabalho para comer bem... tem as melhores promoções que vão agradar a todos.
+                        <cite>
+                            <img src="./resources/img/reservas/customer-2.jpg" />Andressa Ascoleza
+                        </cite>
+                    </blockquote>
+                </div>
+                <div class="col span-1-of-3">
+                    <!--Terceira coluna -->
+                    <blockquote>
+                        Eu estava procurando por uma refeição gostosa e que coubesse no meu bolso e encontrei... há Css Burguer, melhor custo-benefício! Muito mais que uma simples hamburgueria! Nosso aprova Romulo!
+                        <cite>
+                            <img src="./resources/img/reservas/customer-3.jpg" />Jonas Couto
+                        </cite>
+                    </blockquote>
+                </div>
+            </div>
+        </section>
+    </div>
+    <!-- <section class="container-img">
         <p>Reservas</p>
     </section>
 
@@ -85,45 +132,9 @@
             <a href="#" class="botao">Enviar</a>
 
         </form>
-    </section>
+    </section> -->
 
-    <footer class="promo-footer">
-        <div>
-            <div class="col span-1-of-2">
-                <ul class="footer-nav">
-                    <li><a href="#">Nosso Hamburguer é o melhor.</a></li>
-                </ul>
-            </div>
-            <div>
-                <ul class="social-links">
-                    <li>
-                        <a href="#">
-                            <ion-icon class="logo-instagram" name="logo-instagram"></ion-icon>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <ion-icon class="logo-facebook" name="logo-facebook"></ion-icon>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <ion-icon class="logo-googleplus" name="logo-googleplus"></ion-icon>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <ion-icon class="logo-twitter" name="logo-twitter"></ion-icon>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="footer-paragrafo">
-            <p>Copyright &copy; 2019 CSS BUrguer Todos os direitos reservados.</p>
-        </div>
-        </ul>
-    </footer>
+    
     <script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
 
 
