--- a/cardapio.html
+++ b/cardapio.html
@@ -12,45 +12,51 @@
 </head>
 <body>
     <div class="container">
-        <header >
-            <!-- <img src="./resources/css/img/logo.png" alt="Css Burguer"> -->
-            <nav class="nav-menu">
-                <li class="item-nav ">
-                    <a href="./home.html">
-                        Home
-                    </a>
-                </li>
-                <li class="item-nav">
-                    <a href="./cardapio.html">
-                        Cardápio
-                    </a>
-                </li>
-                <li class="item-nav">
-                    <a href="./galeria.html">
-                        Galeria
-                    </a>
-                </li>
-                <li class="item-nav">
-                    <a href="./promo.html">
-                        Promoções
-                    </a>
-                </li>
-                <li class="item-nav">
-                    <a href="./delivery.html">
-                        Delivery
-                    </a>
-                </li>
-                <li class="item-nav">
-                    <a href="./reservas.html">
-                        Reservas
-                    </a>
-                </li>
-                <li class="item-nav">
-                    <a href="./franqueado.html">
-                        Seja um franqueado
-                    </a>
-                </li>
-            </nav>
+        <input id="main-menu-checkbox" type="checkbox">
+    <header class="menu">
+        <img src="./resources/css/img/logo.png" alt="Css Burguer">
+        <div class="iconemenu">
+            <ion-icon name="menu-outline"></ion-icon>
+        </div>
+
+        <nav class="nav-menu">
+            <li class="item-nav ">
+                <a href="./home.html">
+                    Home
+                </a>
+            </li>
+            <li class="item-nav">
+                <a href="./cardapio.html">
+                    Cardápio
+                </a>
+            </li>
+            <li class="item-nav">
+                <a href="./galeria.html">
+                    Galeria
+                </a>
+            </li>
+            <li class="item-nav">
+                <a href="./promo.html">
+                    Promoções
+                </a>
+            </li>
+            <li class="item-nav">
+                <a href="./delivery.html">
+                    Delivery
+                </a>
+            </li>
+            <li class="item-nav">
+                <a href="./reservas.html">
+                    Reservas
+                </a>
+            </li>
+            <li class="item-nav">
+                <a href="./franqueado.html">
+                    Seja um franqueado
+                </a>
+            </li>
+        </nav>
+    </header>
         </header>
         <div class="cardapio">
             <h1 class="title">Cardápio</h1>
@@ -124,5 +130,5 @@
         </footer>
     </div>
     <script src="./resources/js/cardapio.js"></script>
-    <script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
+    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
 </body>
