--- a/galeria.html
+++ b/galeria.html
@@ -29,7 +29,7 @@
                     </a>
                 </li>
                 <li class="item-nav">
-                    <a href="./promocoes.html">
+                    <a href="./promo.html">
                         Promoções
                     </a>
                 </li>
@@ -39,7 +39,7 @@
                     </a>
                 </li>
                 <li class="item-nav">
-                    <a href="#">
+                    <a href="./reservas.html">
                         Reservas
                     </a>
                 </li>
