--- a/delivery.html
+++ b/delivery.html
@@ -10,8 +10,13 @@
 </head>
 <body>
     <div class="container">
-        <header >
-            <!-- <img src="./resources/css/img/logo.png" alt="Css Burguer"> -->
+        <input id="main-menu-checkbox" type="checkbox">
+        <header class="menu">
+            <img src="./resources/css/img/logo.png" alt="Css Burguer">
+            <div class="iconemenu">
+                <ion-icon name="menu-outline"></ion-icon>
+            </div>
+
             <nav class="nav-menu">
                 <li class="item-nav ">
                     <a href="./home.html">
@@ -93,5 +98,6 @@
             </ul>
         </footer>
     </div>
-<script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
+    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
 </body>
+</html>
