--- a/franqueado.html
+++ b/franqueado.html
@@ -10,8 +10,14 @@
 </head>
 
 <body>
+    <!-- AVISAR JULIANO -->
+    <input id="main-menu-checkbox" type="checkbox">
     <header class="menu">
         <img src="./resources/css/img/logo.png" alt="Css Burguer">
+        <div class="iconemenu">
+            <ion-icon name="menu-outline"></ion-icon>
+        </div>
+
         <nav class="nav-menu">
             <li class="item-nav ">
                 <a href="./home.html">
@@ -19,7 +25,7 @@
                 </a>
             </li>
             <li class="item-nav">
-                <a href="./cardapio.html">
+                <a href="#">
                     Cardápio
                 </a>
             </li>
@@ -39,7 +45,7 @@
                 </a>
             </li>
             <li class="item-nav">
-                <a href="#">
+                <a href="./reservas.html">
                     Reservas
                 </a>
             </li>
@@ -50,6 +56,8 @@
             </li>
         </nav>
     </header>
+    <!-- AVISAR JULIANO -->
+    <div class="topo"></div>
     <section class="container-img">
         <p>Seja um franqueado</p>
     </section>
@@ -71,40 +79,67 @@
             </ul>
         </div>
     </section>
-
-    <div class="registroformulario">
-        <h1>Formulário Reservas</h1>
-    </div>
-
-    <section class="container-formulario-conteudo">
-        <form>
-            <label>Nome</label>
-            <input type="text" name="primeiro_nome">
-
-            <label>Cpf</label>
-            <input type="text" name="cpf">
-
-            <label>Endereço</label>
-            <input type="text" name="endereco">
-
-            <label>Email</label>
-            <input type="text" name="email">
-
-            <label>Investimento</label>
-            <input type="text" name="investimento">
-
-            <label>Cidade interesse</label>
-            <input type="text" name="interesse">
-
-            <label>Telefone</label>
-            <input class="inputtelefone" type="text" name="phone">
-
-            <label>Observação</label>
-            <textarea name="observacao"></textarea>
+    <div class="wrapper">
+        <div class="title">
+            Formulário de cadastro
+        </div>
+        <div class="form">
+            <div class="input_field">
+                <label>Nome</label>
+                <input type="text" class="input">
+            </div>
+            <div class="input_field">
+                <label>Sobrenome</label>
+                <input type="text" class="input">
+            </div>
+            <div class="input_field">
+                <label>Sexo</label>
+                <div class="custom_select">
+                    <select>
+                        <option value="">Selecionar</option>
+                        <option value="">Masculino</option>
+                        <option value="">Feminino</option>
+                    </select>
+                </div>
+            </div>
+            <div class="input_field">
+                <label>Endereço</label>
+                <input type="text" class="input">
+            </div>
+            <div class="input_field">
+                <label>Cidade</label>
+                <input type="text" class="input">
+            </div>
             
-            <a href="#" class="botao">Enviar</a>
-
-        </form>
+            <div class="input_field">
+                <label>Email</label>
+                <input type="email" class="input">
+            </div>
+            <div class="input_field">
+                <label>CEP</label>
+                <input type="text" class="input">
+            </div>
+            <div class="input_field">
+                <label>Telefone</label>
+                <input type="tel" class="input">
+            </div>
+            <div class="input_field">
+                <label>Observações</label>
+                <textarea class="textarea"></textarea>
+            </div>
+            <div class="input_field terms">
+                <label class="check">
+                    <input type="checkbox">
+                    <span class="checkmark"></span>
+                </label>
+                <p>Eu aceito todos os termos e condições</p>
+            </div>
+            <div class="input_field">
+                <input type="submit" value="Enviar" class="btn">
+            </div>
+             
+        </div>
+    </div>
 
     </section>
 
@@ -128,12 +163,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <ion-icon class="logo-googleplus" name="logo-googleplus"></ion-icon>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
+                        <a href="./landingPage.html">
                             <ion-icon class="logo-twitter" name="logo-twitter"></ion-icon>
                         </a>
                     </li>
@@ -141,11 +171,11 @@
             </div>
         </div>
         <div class="footer-paragrafo">
-            <p>Copyright &copy; 2019 CSS BUrguer Todos os direitos reservados.</p>
+            <p class="copy">Copyright &copy; 2019 CSS BUrguer Todos os direitos reservados.</p>
         </div>
         </ul>
     </footer>
-    <script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
+    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
 
 
 </body>
