--- a/promo.html
+++ b/promo.html
@@ -11,8 +11,13 @@
 </head>
 <body>
     <div class="container-promo">
-        <header>
-            <!-- <img src="./resources/css/img/logo.png" alt="Css Burguer"> -->
+        <input id="main-menu-checkbox" type="checkbox">
+        <header class="menu">
+            <img src="./resources/css/img/logo.png" alt="Css Burguer">
+            <div class="iconemenu">
+                <ion-icon name="menu-outline"></ion-icon>
+            </div>
+
             <nav class="nav-menu">
                 <li class="item-nav ">
                     <a href="./home.html">
@@ -50,7 +55,7 @@
                     </a>
                 </li>
             </nav>
-        </header>  
+        </header>
         <h1 class="title-promo">Promoções</h1>
         <div class="promo">
             <section class="slider-exemplo">   
@@ -141,6 +146,6 @@
 	<!-- importação da biblioteca BOOTSTRAP-->
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	<!-- importação da biblioteca de ícones-->
-    <script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
+    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
 </body>
 </html>
