--- a/home.html
+++ b/home.html
@@ -54,8 +54,8 @@
             </li>
         </nav>
     </header>
-    <!-- AVISAR JULIANO -->
     <div class="topo"></div>
+    <h1>CSS Burguer</h1>
     <section class="container-img">
         <p class="container-p">
                 A hamburgueria Css Burguer foi criada em 2020 na disciplina de desenvolvimento Web
