--- a/galeria.html
+++ b/galeria.html
@@ -54,6 +54,7 @@
             </li>
         </nav>
     </header>
+    <div class="topo"></div>
     <div class="container-sections">
         <section id="items-wrapper">
             <h1>Galeria</h1>
