--- a/delivery.html
+++ b/delivery.html
@@ -55,6 +55,7 @@
                 </li>
             </nav>
         </header>
+        <div class="topo"></div>
         <section class="section-steps">
             <h1>Baixe agora o APP!</h1>
             <div class="row">
@@ -64,7 +65,7 @@
                 <div class="col span-1-of-2 steps-box">
                     <div class="step">
                         <div>1</div>
-                        <p>Selecioneo pedido do seu gosto e que caiba no seu bolso!</p>
+                        <p>Selecione o pedido do seu gosto e que caiba no seu bolso!</p>
                     </div>
                     <div class="step">
                         <div>2</div>
