--- a/promo.html
+++ b/promo.html
@@ -56,6 +56,7 @@
                 </li>
             </nav>
         </header>
+        <!-- <div class="topo"></div> -->
         <h1 class="title-promo">Promoções</h1>
         <div class="promo">
             <section class="slider-exemplo">   
