--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
     </header>
     <div class="topo"></div>
     <h1>CSS Burguer</h1>
-    <section class="container-img">
+    <section >
         <p class="container-p">
                 A hamburgueria Css Burguer foi criada em 2020 na disciplina de desenvolvimento Web
             para Dispositivos Móveis,então trouxemos uma experiência única de sensações e linhas de código.
@@ -74,9 +74,9 @@
             </div>
             <div>
                 <ul class="social-links">
-                    <li><a href="#"><ion-icon class="logo-instagram" name="logo-instagram"></ion-icon></a></li>
-                    <li><a href="#"><ion-icon class="logo-facebook" name="logo-facebook"></ion-icon></a></li>
-                    <li><a href="#"><ion-icon class="logo-twitter" name="logo-twitter"></ion-icon></a></li>
+                    <li><a href="https://www.instagram.com/"><ion-icon class="logo-instagram" name="logo-instagram"></ion-icon></a></li>
+                    <li><a href="https://www.facebook.com/"><ion-icon class="logo-facebook" name="logo-facebook"></ion-icon></a></li>
+                    <li><a href="https://www.twitter.com/"><ion-icon class="logo-twitter" name="logo-twitter"></ion-icon></a></li>
                 </ul>
             </div>
         </div>
