--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Css Burguer</title>
-    <link rel="stylesheet" type="text/css" href="./resources/css/landingPage.css">
+    <link rel="stylesheet" type="text/css" href="./resources/css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Modern+Antiqua&display=swap" rel="stylesheet">
 </head>
 
